--- a/whatif/whatif/001/index.html
+++ b/whatif/whatif/001/index.html
@@ -2,9 +2,30 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
+    <link href="style.min.css" rel="stylesheet" />
 </head>
-<body class="whatif-center whatif-diapo">
-    <h1>wat als ik nu eens...</h1>
+<body class="whatif-topright">
+    <blockquote class="quote">
+        <div class="bg-img">
+            <img src="coraline2.jpg" alt="Coraline" />
+        </div>
+        <div class="title">
+            <h1 contenteditable="true" autocomplete="false"  Spellcheck="false">Fairy tales are more than true: not because they tell us that dragons exist, but because they tell us that dragons can be beaten</h1>
+            <canvas id="myCanvas" data-fill="true" data-stroke="false"></canvas>
+            <canvas id="myCanvasStroke" data-fill="false" data-stroke="true"></canvas>
+        </div>
+
+        <div class="byline">Neil Gaiman, Coraline</div>
+    </blockquote>
+
+    
+
+
+
+
+    <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/vibrant.js/1.0.0/Vibrant.min.js?ver=1.0.0'></script>
+    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="script.js"></script>
     <script src="../000/whatif.php"></script>
 </body>
 </html>
